  16 Sep 2012; Manuel Rüger (mrueg) gentoo@rueg.eu classifier-1.3.3.ebuild:
  dev-ruby/classifier: Fix tests

  26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu classifier-1.3.3.ebuild:
  dev-ruby/classifier: Drop some ruby targets

  26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu classifier-1.3.3.ebuild:
  dev-ruby/classifier: Use ruby_add_{r,b}depend

*classifier-1.3.3 (25 Aug 2012)

  25 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu +classifier-1.3.3.ebuild,
  +metadata.xml:
  dev-ruby/classifier: Initial ebuild