@@ -1,4 +1,4 @@
 DIST classifier-1.3.3.gem 24576 SHA256 2fe5436a8efa52b731edc094152ecb63ead186f2260f2f57f79b1bec506301cf SHA512 b3249da9b035ce706df75c112a12cd931af7d59805954399f4ae1b844c3f4fd9a3878401f978f55ee7036b6fa2bb520a71a06b30e621cf391a678e95695414d0 WHIRLPOOL 43823addc5f93f8a75f96f7265d75e36c3482c73b35d4e64ce4a421a2593c5ef7566bfcc82df8376bfc74d1ca93edf64541349b7ec1a870e2c1291029315a7b1
-EBUILD classifier-1.3.3.ebuild 899 SHA256 32bf7408838bdbbbcb9c5af8a15e4441b2413a4acf3270082ce8eb9a27e4b9bc SHA512 62fde0634f470f9e1be710f9f2bcf79a4534cb77d08bd462548680edcd18586f9b6865bab01058e2ef494ecbf7d4c11c2db775a2b2eb6713400821c6c3a0f657 WHIRLPOOL 0fbbfeb7d9937775785bae481ead65d167d2674a4c41b8f911de266f877e995f4f7a4d93927941633dc78dd905588b57ad39ad01c5fb474d07584cbd312a6f6d
-MISC ChangeLog 527 SHA256 31d7c6370e05a4dfee860440e871dda2a8412d115d06c21618d8a49643bd3736 SHA512 7b9b4ed1745650bf2962017b60ec47d091120619060985c902fd5175c5db5923043e6e2d2890102eb7d6e92b2f3e586fb96eb60aab72291d29fcb1b4dd4fc044 WHIRLPOOL 0074b9e6dcfc8ccd06f731fe9e7a9d7085229752fd403de2c23bdc45e9da6e50f786f698f0f2b82a2e1a0a971ecd0121d23ebf4949f591a29f4f5cfa3f58b67c
+EBUILD classifier-1.3.3.ebuild 820 SHA256 2a55cee92a87f2001f77e01e234638c45f6c05d2d2cc21470781b5a122606160 SHA512 d5b0b179af7c11c3b8d8105de7664b8ab557442f7e652cb4dd1472d306214479a2f5535183fcde488ef9890cd4869a620c1fbbe991eb7c54092834f7b7d8624f WHIRLPOOL c759f545f15c82d606d61533e6923dc5dcd22524bfe17b793a611b25b2f2e72e9a4c96d97516fc2353feddbe630a417dda4ef7bc1953168f86d6e2590d568571
+MISC ChangeLog 640 SHA256 eb1cd53c970e5e01b334259d95a36f9f75ffe669c9bc609e0e32eecfce823097 SHA512 fe2f1b9f6f2dfa0f5063f0a00b65c6d01f87791ec0ea1fa1cd4df1660d859094c1a8049378c7de2f54c93c34e10e5a0f0433ab8fd3f562354b85cb13b6004912 WHIRLPOOL a3dfeba0683713c4fafd857383625c40a6bc88db9fa0370c763f4b370fb702ea7575d45ec06702df8e14d31aff0f142e1d44846c90768e550aa9f88431114a9d
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
